[jbr17] add java.awt.image
GitOrigin-RevId: d3941675b434562eb852e351c36c316d51acfaf0