@@ -443,6 +443,7 @@ final class BuildContextImpl extends BuildContext {
         '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
         '--add-opens=java.desktop/java.awt=ALL-UNNAMED',
         '--add-opens=java.desktop/java.awt.event=ALL-UNNAMED',
+        '--add-opens=java.desktop/java.awt.image=ALL-UNNAMED',
         '--add-opens=java.desktop/java.awt.peer=ALL-UNNAMED',
         '--add-opens=java.desktop/javax.swing=ALL-UNNAMED',
         '--add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED',
